# GreedyCut

./: .gitignore  CMakeLists.txt  README.md  opt.txt  ori_opt.txt
src/: AddAuxiliaryPoint.cpp  AddAuxiliaryPoint.h  Auxiliary.cpp  Auxiliary.h  GAP.cpp  GAP.h  KPNewton.cpp  KPNewton.h  MeshCache.cpp  MeshCache.h  MeshCut.cpp  MeshCut.h  PointFinding.cpp  PointFinding.h  PointSampling.cpp  PointSampling.h  main.cpp
src/AddAuxiliaryPoint/: AddAuxiliaryPoint.cpp  AddAuxiliaryPoints.cpp  AddAuxiliaryPoints.h
src/Auxiliary/: Algorithm.cpp  Algorithm.h  OptionReader.cpp  OptionReader.h
src/GAP/: GAP.cpp  GAP.h
src/GraduallyAddPoints/: GAP.cpp  GAP.h
src/GreedCut/: GreedCut.cpp  GreedCut.h
src/KPNewton/: KPNewton.cpp  KPNewton.h
src/MeshCut/: MeshCut.cpp  MeshCut.h
src/MeshDefinition/: MeshCache.cpp  MeshCache.h  MeshDefinition.cpp  MeshDefinition.h
src/PP/: PP.cpp  PP.h
src/PardisoSolver/: PardisoSolver.cpp  PardisoSolver.h
src/PointFinding/: PointFinding.cpp  PointFinding.h
src/PointSampling/: PointSampling.cpp  PointSampling.h
src/Solver/: EigenLinSolver.cpp  EigenLinSolver.h  MKLPardisoSolver.cpp  MKLPardisoSolver.h  PardisoSolver.cpp  PardisoSolver.h  Solver.h
src/TraverseVertexFinding/: TraverseVertexFinding.cpp  TraverseVertexFinding.h
